2009-10-28  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=25897
        [Gtk] Extraneous object of ROLE_PANEL in hierarchy for entries

        Remove the extraneous object of ROLE_PANEL.

        * accessibility/gtk/AccessibilityObjectAtk.cpp:
        (AccessibilityObject::accessibilityPlatformIncludesObject):

2009-10-28  Jonathan Dixon  <joth@chromium.org>

        Reviewed by Eric Seidel.

        Bug 30547: (Chromium) searchbox not rendered properly due to the css property -webkit-border-radius
        https://bugs.webkit.org/show_bug.cgi?id=30547

        Test: fast/css/text-input-with-webkit-border-radius.html

        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::paintTextFieldInternal):
          Implemented rounded border rendering in Chromium Windows theme renderer.

2009-10-28  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Pull items collections from resources panel and
        timeline panel into AbstractTimelinePanel.

        https://bugs.webkit.org/show_bug.cgi?id=30875

        * inspector/front-end/AbstractTimelinePanel.js:
        (WebInspector.AbstractTimelinePanel):
        (WebInspector.AbstractTimelinePanel.prototype.populateSidebar):
        (WebInspector.AbstractTimelinePanel.prototype.createItemTreeElement):
        (WebInspector.AbstractTimelinePanel.prototype.createItemGraph):
        (WebInspector.AbstractTimelinePanel.prototype._showCategory):
        (WebInspector.AbstractTimelinePanel.prototype._hideCategory):
        (WebInspector.AbstractTimelinePanel.prototype.filter):
        (WebInspector.AbstractTimelinePanel.prototype._createGraph):
        (WebInspector.AbstractTimelinePanel.prototype.updateMainViewWidth):
        (WebInspector.AbstractTimelinePanel.prototype.refresh):
        (WebInspector.AbstractTimelinePanel.prototype.reset):